# SFML_Clion_Template

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
private/: main.cpp
public/: ProjectConfig.h.in
